Obnam NEWS
==========


This file summarizes changes between releases of Obnam.

Version 0.29, released UNRELEASED; a BETA release
-------------------------------------------------

* "obnam backup" now writes performance statistics at the end of a backup run.
  Search the log for "Backup performance statistics" (INFO level).

Version 0.28, released 2012-05-10; a BETA release
-------------------------------------------------

* `force-lock` should now remove all locks.
* Out-of-space errors in the repository now terminate the backup process.
  Previously, Obnam would continue, ignoring the failure to write. If you
  make space in the repository and restart Obnam, it will continue from
  the previous checkpoint.
* The convert5to6 black box test now works even if run by other people
  than liw.
* "obnam backup" now uses a single SFTP connection to the backup repository,
  rather than opening a new one after each checkpoint generation. Thanks to
  weinzwang for reporting the problem.
* "obnam verify" now obeys the `--quiet` option.
* "obnam backup" no longer counts chunks already in the repository in the
  uploaded amount of data.

Version 0.27, released 2012-04-30; a BETA release
-------------------------------------------------

* The repository format has again changed in an incompatible manner,
  so you will need to re-backup everything again. Alternatively, you can
  try the new `convert5to6` subcommand. See the manual page for details.
  Make sure you have a copy of the repository before converting, the
  code is new and may be buggy.
* New option `--small-files-in-btree` enables Obnam to store the contents
  of small files in the per-client B-tree. This is not the default, at
  least yet, since it's impact on real life performance is unknown, but
  it should make things go a bit faster for high latency repository
  connections.
* Some SFTP related speed optimizations.
* Data filtering is now strictly stable and priority-ordered, ensuring that