@@ -1,1 +1,1 @@
-ERROR: aaa: metadata change: st_mtime
+verify failure: TMP/data/aaa: metadata change: st_mtime_sec (...)
