@@ -9,6 +9,8 @@ Version 0.29, released UNRELEASED; a BETA release
 
 * "obnam backup" now writes performance statistics at the end of a backup run.
   Search the log for "Backup performance statistics" (INFO level).
+* "obnam verify" now continues past the first error. Thanks to Rafał Gwiazda
+  for requesting this.
 
 Version 0.28, released 2012-05-10; a BETA release
 -------------------------------------------------
